; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/extr_tree.c_base_get_file_delta_stream.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/extr_tree.c_base_get_file_delta_stream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32**, i32*, i8*, i32*, i8*, i32*)* @base_get_file_delta_stream to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @base_get_file_delta_stream(i32** %0, i32* %1, i8* %2, i32* %3, i8* %4, i32* %5) #0 {
  %7 = alloca i32**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  store i32** %0, i32*** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32* %3, i32** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32* %5, i32** %12, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %27

18:                                               ; preds = %6
  %19 = load i8*, i8** %9, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %21, label %27

21:                                               ; preds = %18
  %22 = load i32*, i32** %8, align 8
  %23 = load i8*, i8** %9, align 8
  %24 = load i32*, i32** %12, align 8
  %25 = call i32 @base_file_contents(i32** %13, i32* %22, i8* %23, i32* %24)
  %26 = call i32 @SVN_ERR(i32 %25)
  br label %30

27:                                               ; preds = %18, %6
  %28 = load i32*, i32** %12, align 8
  %29 = call i32* @svn_stream_empty(i32* %28)
  store i32* %29, i32** %13, align 8
  br label %30

30:                                               ; preds = %27, %21
  %31 = load i32*, i32** %10, align 8
  %32 = load i8*, i8** %11, align 8
  %33 = load i32*, i32** %12, align 8
  %34 = call i32 @base_file_contents(i32** %14, i32* %31, i8* %32, i32* %33)
  %35 = call i32 @SVN_ERR(i32 %34)
  %36 = load i32*, i32** %13, align 8
  %37 = load i32*, i32** %14, align 8
  %38 = load i32, i32* @TRUE, align 4
  %39 = load i32*, i32** %12, align 8
  %40 = call i32 @svn_txdelta2(i32** %15, i32* %36, i32* %37, i32 %38, i32* %39)
  %41 = load i32*, i32** %15, align 8
  %42 = load i32**, i32*** %7, align 8
  store i32* %41, i32** %42, align 8
  %43 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %43
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @base_file_contents(i32**, i32*, i8*, i32*) #1

declare dso_local i32* @svn_stream_empty(i32*) #1

declare dso_local i32 @svn_txdelta2(i32**, i32*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
